plugins {
    id 'java'
    id 'org.springframework.boot' version '3.0.4'
    id 'io.spring.dependency-management' version '1.1.0'
}

group = 'ut.ee'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-rest'
//    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'

    implementation 'org.postgresql:postgresql:42.3.1'

    implementation 'org.apache.tika:tika-core:1.24'
    implementation 'org.apache.tika:tika-parsers:1.24'

    implementation "org.zwobble.mammoth:mammoth:1.5.0"

    implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '5.2.2'
    implementation 'org.jsoup:jsoup:1.15.4'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
//    testImplementation 'org.springframework.security:spring-security-test'


    compileOnly 'org.projectlombok:lombok:1.18.26'
    annotationProcessor 'org.projectlombok:lombok:1.18.26'

    testCompileOnly 'org.projectlombok:lombok:1.18.26'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.26'

}

tasks.named('test') {
    useJUnitPlatform()
}
